--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.3
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
+Flask-SocketIO==5.4.1
 SQLAlchemy==2.0.40
 Werkzeug==3.0.6
 PyMySQL==1.1.1
